--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Photo Gallery</title>
-	<link rel="stylesheet" href="gallery (2).css">
-	<script src = "gallery (2).js"></script>
+	<link rel="stylesheet" href="gallery_2.css">
+	<script src = "gallery_2.js"></script>
 </head>
 <body>
 	
